@@ -1,6 +1,7 @@
 package com.pine;
 
 import com.pine.dock.DockDTO;
+import com.pine.dock.DockGroup;
 import com.pine.dock.DockService;
 import com.pine.panels.EditorHeaderPanel;
 import com.pine.panels.ToasterPanel;
@@ -10,8 +11,8 @@ import com.pine.service.ProjectService;
 import com.pine.tools.ToolsModule;
 import com.pine.view.View;
 import imgui.ImVec4;
-import imgui.flag.ImGuiDir;
 
+import java.util.Collections;
 import java.util.List;
 
 import static com.pine.Engine.GLSL_VERSION;
@@ -45,34 +46,14 @@ public class EditorWindow extends AbstractWindow {
         DockDTO downLeft = new DockDTO(EditorDock.Console);
         DockDTO downRight = new DockDTO(EditorDock.Files);
 
-        dockCenter.setOrigin(null);
-        dockCenter.setSplitDir(ImGuiDir.Right);
         dockCenter.setSizeRatioForNodeAtDir(0.17f);
-        dockCenter.setOutAtOppositeDir(null);
-
-        rightUp.setOrigin(dockCenter);
-        rightUp.setSplitDir(ImGuiDir.Down);
         rightUp.setSizeRatioForNodeAtDir(0.4f);
-        rightUp.setOutAtOppositeDir(dockCenter);
-
-        rightDown.setOrigin(rightUp);
-        rightDown.setSplitDir(ImGuiDir.Down);
         rightDown.setSizeRatioForNodeAtDir(0.6f);
-        rightDown.setOutAtOppositeDir(rightUp);
-
-        downLeft.setOrigin(null);
-        downLeft.setSplitDir(ImGuiDir.Down);
         downLeft.setSizeRatioForNodeAtDir(0.22f);
-        downLeft.setOutAtOppositeDir(null);
-
-        downRight.setOrigin(downLeft);
-        downRight.setSplitDir(ImGuiDir.Right);
         downRight.setSizeRatioForNodeAtDir(0.5f);
-        downRight.setOutAtOppositeDir(downLeft);
 
-        dockService.getCurrentDockGroup().docks.addAll(List.of(dockCenter, rightUp, rightDown, downLeft, downRight));
-        dockService.setDockGroupTemplate(dockService.getCurrentDockGroup());
-
+        dockService.setDockGroupTemplate(new DockGroup("Viewport", dockCenter, List.of(downLeft, downRight), Collections.emptyList(), List.of(rightUp, rightDown)));
+        dockService.createDockGroup();
         projectService.loadProject();
     }
 
